fixed table layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,7 @@ body {
 #client-details {
   @apply flex flex-col md:flex-row justify-between w-full gap-4;
 }
+
+.scroll_container {
+  @apply w-full overflow-x-auto overflow-auto;
+}
